<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:screenOrientation="portrait"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.react.Biometric.FormularioActivity"
    tools:showIn="@layout/activity_formulario">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/lblTituloCompleto"
                android:layout_width="411dp"
                android:layout_height="42dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/form_titulo"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:background="?attr/colorButtonNormal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloCompleto">

                <TextView
                    android:id="@+id/txtIdentificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_label_identificacion"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/txtPlaceHolder"
                    style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/form_txt_identificacion"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:labelFor="@id/txtIdentificacion"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtIdentificacion" />

                <TextView
                    android:id="@+id/txtMensajeError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/form_error_identificacion"
                    android:textColor="#FF0101"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPlaceHolder" />

                <TextView
                    android:id="@+id/lblNombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txt_Nombres"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPlaceHolder" />

                <EditText
                    android:id="@+id/txtNombres"
                    style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/form_txt_Nombres"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblNombres" />

                <TextView
                    android:id="@+id/lblApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_txt_Apellidos"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombres" />

                <EditText
                    android:id="@+id/txtApellidos"
                    style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/form_txt_Apellidos"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblApellidos" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cst_main_verify"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <Button
                    android:id="@+id/btnContinuar"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/continuar_proceso"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>